content-stg-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: content-stg
spec:
  ports:
    - name: http
      port: 80
  selector:
    app: content-stg
